feat: Answers & authentication specs

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,2 +1,20 @@
+= render 'shared/errors', resource: @answer
+
 h1= @question.title
 p= @question.body
+- if current_user&.is_author_of?(@question)
+    = link_to 'Delete question', question_path(@question),
+                                 method: :delete,
+                                 data: { confirm: 'Are you sure?' }
+
+- @question.answers.select(&:persisted?).each do |answer|
+  p= answer.body
+  - if current_user&.is_author_of?(answer)
+    = link_to 'Delete answer', answer_path(answer),
+                               method: :delete,
+                               data: { confirm: 'Are you sure?' }
+
+= form_with model: [@question, @question.answers.new], local: true do |f|
+  = f.label :body
+  = f.text_area :body
+  = f.submit 'Answer the question'
