feat: Ajax added

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,20 +1,17 @@
-= render 'shared/errors', resource: @answer
+.answer-errors
+  = render 'shared/errors', resource: @answer
 
-h1= @question.title
-p= @question.body
-- if current_user&.is_author_of?(@question)
-    = link_to 'Delete question', question_path(@question),
-                                 method: :delete,
-                                 data: { confirm: 'Are you sure?' }
+.question-errors
+  = render 'shared/errors', resource: @question
 
-- @question.answers.select(&:persisted?).each do |answer|
-  p= answer.body
-  - if current_user&.is_author_of?(answer)
-    = link_to 'Delete answer', answer_path(answer),
-                               method: :delete,
-                               data: { confirm: 'Are you sure?' }
+.question
+  = render @question
 
-= form_with model: [@question, @question.answers.new], local: true do |f|
-  = f.label :body
-  = f.text_area :body
-  = f.submit 'Answer the question'
+.answers
+  = render @answers
+
+.answer_new      
+  = form_with model: [@question, @question.answers.new], class: 'new-answer', local: false do |f|
+    = f.label :body, 'Your answer'
+    = f.text_area :body
+    = f.submit 'Answer the question'
