--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
 
   <body>
     <%= render 'shared/nav' %>
+    <div class="alert">
+      <%= alert %>
+    </div>
+
     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
