--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,4 @@
 - @questions.each do |question|
-  p= question.title
+  p= link_to question.title, question_path(question)
 
 p= link_to 'Ask question', new_question_path
