--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,6 +1,10 @@
 h1= question.title
 p= question.body
 
+- if question.files.attached?
+  - question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file)
+
 - if current_user&.is_author_of?(question)
   p= link_to 'Delete question', question_path(question), method: :delete
   p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
