feat: author can add files to questions while editing

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -10,8 +10,14 @@ p= question.body
   p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
 
 = form_with model: question, local: false, class: 'hidden', html: { id: "edit-question" } do |f|
-  = f.label :title, 'Edit title'
-  = f.text_field :title
-  = f.label :body, 'Edit question'
-  = f.text_area :body
-  = f.submit 'Save'
+  p
+    = f.label :title, 'Edit title'
+    = f.text_field :title
+  p
+    = f.label :body, 'Edit question'
+    = f.text_area :body
+  p
+    = f.label :files
+    = f.file_field :files, multiple: true
+  
+  p= f.submit 'Save'
