feat: author can add files to answers while editing

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -19,6 +19,12 @@ div id="answer-#{answer.id}"
     p= link_to 'Mark as best', mark_best_answer_path(answer), class: 'best_answer_link', method: :post, remote: true
 
 = form_with model: answer, local: false, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
- = f.label :body, 'Edit answer'
- = f.text_area :body
- = f.submit 'Save'
+  p
+    = f.label :body, 'Edit answer'
+    = f.text_area :body
+
+  p
+    = f.label :files
+    = f.file_field :files, multiple: true
+  
+  p= f.submit 'Save'
