--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,7 +3,10 @@ p= question.body
 
 - if question.files.attached?
   - question.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file)
+    div id="attachment_#{file.id}"
+      p= link_to file.filename.to_s, url_for(file)
+      - if current_user&.is_author_of?(question)
+        = link_to 'Delete file', active_storage_attachment_path(file), method: :delete, remote: true
 
 - if current_user&.is_author_of?(question)
   p= link_to 'Delete question', question_path(question), method: :delete
