--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -13,7 +13,10 @@ div id="answer-#{answer.id}"
 
   - if answer.files.attached?
     - answer.files.each do |file|
-      p= link_to file.filename.to_s, url_for(file)
+      div id="attachment_#{file.id}"
+        p= link_to file.filename.to_s, url_for(file)
+        - if current_user&.is_author_of?(answer)
+          = link_to 'Delete file', active_storage_attachment_path(file), method: :delete, remote: true
 
   - if current_user&.is_author_of?(answer.question)
     p= link_to 'Mark as best', mark_best_answer_path(answer), class: 'best_answer_link', method: :post, remote: true
