feat: Yandex cloud uploading added

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -28,6 +28,6 @@ div id="answer-#{answer.id}"
 
   p
     = f.label :files
-    = f.file_field :files, multiple: true
+    = f.file_field :files, multiple: true, direct_upload: true
   
   p= f.submit 'Save'
