--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -21,6 +21,6 @@ p= question.body
     = f.text_area :body
   p
     = f.label :files
-    = f.file_field :files, multiple: true
+    = f.file_field :files, multiple: true, direct_upload: true
   
   p= f.submit 'Save'
