--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -10,7 +10,7 @@
 
   p
     = f.label :files
-    = f.file_field :files, multiple: true
+    = f.file_field :files, multiple: true, direct_upload: true
   
   p= f.submit 'Ask'
 
