feat: author can add links to questions

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,6 +7,12 @@
 .question
   = render @question
 
+.links
+  p Links:
+  ul
+    -@question.links.each do |link|
+      li= link_to link.name, link.url
+
 .answers
   = render @answers
 
