--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,8 +2,20 @@ div id="answer-#{answer.id}"
   - if answer.best
     .best_answer
       h1= "Best answer: #{answer.body}"
+      .links
+        p Links:
+        ul
+          -answer.links.each do |link|
+            li= link_to link.name, link.url
   - else
     p= answer.body
+
+    .links
+      p Links:
+      ul
+        -answer.links.each do |link|
+          li= link_to link.name, link.url
+
   - if current_user&.is_author_of?(answer)
     p= link_to 'Delete answer', answer_path(answer),
                             method: :delete,
