--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -17,12 +17,22 @@
   = render @answers
 
 .answer_new      
-  = form_with model: [@question, @question.answers.new], class: 'new-answer', local: false do |f|
+  = form_with model: [@question, @answer], class: 'new-answer', local: false do |f|
     p
       = f.label :body, 'Your answer'
       = f.text_area :body
     p
       = f.label :files
       = f.file_field :files, multiple: true, direct_upload: true
+
+    p Links:
+    p
+      =f.fields_for :links do |l|
+        p
+          = l.label :name, 'Link name'
+          = l.text_field :name
+        p
+          = l.label :url
+          = l.text_field :url  
 
     = f.submit 'Answer the question'
