feat: see gist content function added

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -14,7 +14,15 @@ div id="answer-#{answer.id}"
       p Links:
       ul
         -answer.links.each do |link|
-          li= link_to link.name, link.url
+          - if link.gist?
+            li[id="gist-#{link.id}"]
+              = link_to link.name, link.url, class: "gist", data: { gist_id: link.gist_id, link_id: link.id }
+          - else
+            li 
+            = link_to link.name, link.url
+          - if current_user&.is_author_of?(answer)
+              = link_to 'Delete', link_path(link), method: :delete, remote: true
+
 
   - if current_user&.is_author_of?(answer)
     p= link_to 'Delete answer', answer_path(answer),
@@ -41,5 +49,17 @@ div id="answer-#{answer.id}"
   p
     = f.label :files
     = f.file_field :files, multiple: true, direct_upload: true
+
+  p Links:
+  p
+    = f.fields_for :links do |link|
+      p
+        = link.label :name, 'Link name'
+        = link.text_field :name
+      p
+        = link.label :url
+        = link.text_field :url  
+
+      = link_to_add_association 'Add link', f, :links
   
   p= f.submit 'Save'
