--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -22,5 +22,17 @@ p= question.body
   p
     = f.label :files
     = f.file_field :files, multiple: true, direct_upload: true
-  
+
+  p Links:
+  p
+    = f.fields_for :links do |link|
+      p
+        = link.label :name, 'Link name'
+        = link.text_field :name
+      p
+        = link.label :url
+        = link.text_field :url  
+
+      = link_to_add_association 'Add link', f, :links 
+
   p= f.submit 'Save'
