--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -3,4 +3,5 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 <% if @answer.persisted? %>
   $('.answers').append('<%= j render @answer %>');
   $('.new-answer #answer_body').val('');
+  $('.answers').append('<%= javascript_pack_tag 'gist' %>')
 <% end %>
