--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,8 +10,15 @@
 .links
   p Links:
   ul
-    -@question.links.each do |link|
-      li= link_to link.name, link.url
+    -@question.links.each do |link|    
+      - if link.gist?
+        li[id="gist-#{link.id}"]
+          = link_to link.name, link.url, class: "gist", data: { gist_id: link.gist_id, link_id: link.id }
+      - else
+        li 
+          = link_to link.name, link.url
+      - if current_user&.is_author_of?(@question)
+              = link_to 'Delete link', link_path(link), method: :delete, remote: true
 
 .answers
   = render @answers
