feat: rewards for questions added

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,7 +1,15 @@
 div id="answer-#{answer.id}"
   - if answer.best
     .best_answer
-      h1= "Best answer: #{answer.body}"
+      - if answer.question.reward.present?
+        p Rewarded:
+        p
+          = answer.question.reward_name
+        img[src="#{url_for(answer.question.reward)}"]
+
+      - else
+        h1= "Best answer: #{answer.body}"
+        
       .links
         p Links:
         ul
