--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,8 +4,8 @@ div id="answer-#{answer.id}"
       - if answer.question.reward.present?
         p Rewarded:
         p
-          = answer.question.reward_name
-        img[src="#{url_for(answer.question.reward)}"]
+          = answer.question.reward.name
+        img[src="#{url_for(answer.question.reward.file)}"]
 
       - else
         h1= "Best answer: #{answer.body}"
