--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -12,7 +12,7 @@ p= question.body
   p= link_to 'Delete question', question_path(question), method: :delete
   p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
 
-= render 'shared/votes', resource: question
+= render 'shared/votes', resource: question, table: 'questions'
 
 = form_with model: question, local: false, class: 'hidden', html: { id: "edit-question" } do |f|
   p
