--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,7 @@
-- @questions.each do |question|
-  p= link_to question.title, question_path(question)
+span[class="questions-index"]
+
+div.questions-headers-list
+  - @questions.each do |question|
+    = render 'question_header', question: question
 
 p= link_to 'Ask question', new_question_path
