--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,3 +1,8 @@
+span.page-template
+  - if current_user
+    .authenticity-token-template
+      input[type="hidden" name="authenticity_token" value="#{form_authenticity_token}" autocomplete="off"]
+
 .answer-errors
   = render 'shared/errors', resource: @answer
 
