--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -73,3 +73,5 @@ div id="answer-#{answer.id}"
       = link_to_add_association 'Add link', f, :links
   
   p= f.submit 'Save'
+
+= render 'shared/comments', resource: answer
