--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -6,10 +6,10 @@ p= question.body
   - question.files.each do |file|
     div id="attachment_#{file.id}"
       p= link_to file.filename.to_s, url_for(file)
-      - if current_user&.is_author_of?(question)
+      - if can?(:destroy, file)
         = link_to 'Delete file', active_storage_attachment_path(file), method: :delete, remote: true
 
-- if current_user&.is_author_of?(question)
+- if can?(:destroy, question)
   p= link_to 'Delete question', question_path(question), method: :delete
   p= link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
 
