--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -23,7 +23,7 @@ span.page-template
         - else
           li 
             = link_to link.name, link.url
-        - if current_user&.is_author_of?(@question)
+        - if can?(:destroy, link)
                 = link_to 'Delete link', link_path(link), method: :delete, remote: true
 
   .answers
