--- a/app/views/shared/_comments.html.slim
+++ b/app/views/shared/_comments.html.slim
@@ -7,13 +7,13 @@ div.comments
         div
           |By: 
           = comment.user.email
-          - if comment.user == current_user
+          - if can?(:destroy, comment)
             |  
             = link_to 'X', comment_path(comment), method: :delete, remote: true, data: { type: :json }
         br
   div.errors
   div.new
-    - if current_user
+    - if can?(:comment, resource)
       = form_with model: [resource, @comment], url: eval("Rails.application.routes.url_helpers.comment_#{resource.class.name.underscore}_path(#{resource.id})"), local: false, data: { type: :json } do |f|
         div
           = f.label :body, 'Add comment'
